# karnot-cli

./: .gitignore  Cargo.toml  Listing.json  README.md  keypair.json
.github/workflows/: linters.yml
docs/: setup.md
karnot/: Cargo.toml
karnot/karnot/chains/dev/db/full/: IDENTITY  LOG  OPTIONS-000035  OPTIONS-000037
karnot/src/: lib.rs  main.rs  steps.txt
karnot/src/app/: config.rs  madara.rs  mod.rs  utils.rs
karnot/src/cli/: constants.rs  init.rs  list.rs  mod.rs  prompt.rs  run.rs
karnot/src/utils/: github.rs  paths.rs
src/: lib.rs  main.rs
src/app/: config.rs
src/cli/: explorer.rs  init.rs  list.rs  mod.rs  prompt.rs  run.rs
src/da/: avail.rs  celestia.rs  da.rs  da_layers.rs  errors.rs  ethereum.rs  mod.rs  no_da.rs
src/utils/: avail.rs  cmd.rs  constants.rs  docker.rs  errors.rs  github.rs  madara.rs  mod.rs  paths.rs  serde.rs  toml.rs
templates/: karnot.service  karnot.sh
