[package]
name = "madara-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "madara"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bollard = "0.15.0"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
eyre = "0.6.11"
futures-util = "0.3.30"
git2 = "0.18.1"
hex = { version = "0.4.3", features = [] }
inquire = "0.6.2"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
sp-core = "27.0.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = { version = "0.25.3", features = [] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.8"
url = "2.5.0"
