[package]
name = "karnot-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
inquire = "0.6.2"
serde = { version = "1.0.193",  features = ["derive"] }
serde_toml = "0.0.1"
starknet-ff = "0.3.6"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = { version = "0.25.3", features = [] }
toml = "0.8.8"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
thiserror = "1.0.52"
log = "0.4.20"
whoami = "1.4.1"
git2 = "0.18.1"